--- a/Pytorch_on_VM/Dockerfile
+++ b/Pytorch_on_VM/Dockerfile
@@ -8,6 +8,8 @@ WORKDIR /code
 COPY requirements.txt /code
 
 # Install any needed packages specified in requirements.txt
+RUN apt-get update && apt-get install -y curl build-essential
+RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip install -r requirements.txt
 
