--- a/Pytorch_on_VM/Dockerfile
+++ b/Pytorch_on_VM/Dockerfile
@@ -4,12 +4,17 @@ FROM --platform=$BUILDPLATFORM pytorch/pytorch:latest AS builder
 # Set the working directory in the container
 WORKDIR /code
 
+# Update apt-get and install needed tools
+RUN apt-get update && apt-get install -y curl build-essential
+
+# Install Rust
+RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+ENV PATH="/root/.cargo/bin:${PATH}"
+
 # Copy the requirements file into the container
 COPY requirements.txt /code
 
 # Install any needed packages specified in requirements.txt
-RUN apt-get update && apt-get install -y curl build-essential
-RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip install -r requirements.txt
 
