--- a/Pytorch_on_VM/Dockerfile
+++ b/Pytorch_on_VM/Dockerfile
@@ -7,8 +7,12 @@ WORKDIR /code
 # Update apt-get and install needed tools
 RUN apt-get update && apt-get install -y curl build-essential
 
-# Install Rust
+# Install and set a specific Rust version
 RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
+RUN rustup install 1.53.0
+RUN rustup default 1.53.0
+RUN rustup update
+
 ENV PATH="/root/.cargo/bin:${PATH}"
 
 # Copy the requirements file into the container
@@ -16,7 +20,7 @@ COPY requirements.txt /code
 
 # Install any needed packages specified in requirements.txt
 RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install -r requirements.txt
+    pip install -v -r requirements.txt  # Added the -v flag for verbose logging
 
 # Copy the current directory contents into the container
 COPY . /code
