--- a/Pytorch_on_VM/requirements.txt
+++ b/Pytorch_on_VM/requirements.txt
@@ -1,7 +1,1 @@
-numpy==1.21.2
-tokenizers==0.10.3
-huggingface_hub==0.0.17
-accelerate==0.4.0
-sentencepiece==0.1.96
-transformers==4.11.3
-datasets==1.12.1
+numpy
