--- a/Pytorch_on_VM/Dockerfile
+++ b/Pytorch_on_VM/Dockerfile
@@ -1,25 +1,17 @@
 # Use the official PyTorch image as the base image
-FROM --platform=$BUILDPLATFORM pytorch/pytorch:latest AS builder
+FROM pytorch/pytorch:latest
 
 # Set the working directory in the container
 WORKDIR /code
 
 # Update apt-get and install needed tools
-RUN apt-get update && apt-get install -y curl build-essential
-
-# Install and set a specific Rust version
-RUN curl https://sh.rustup.rs -sSf | sh -s -- -y
-RUN /bin/bash -c "source $HOME/.cargo/env && rustup install 1.53.0 && rustup default 1.53.0 && rustup update"
-
-# Update the PATH to include .cargo/bin
-ENV PATH="/root/.cargo/bin:${PATH}"
+RUN apt-get update && apt-get install -y build-essential
 
 # Copy the requirements file into the container
 COPY requirements.txt /code
 
 # Install any needed packages specified in requirements.txt
-RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install -v -r requirements.txt  # Added the -v flag for verbose logging
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the current directory contents into the container
 COPY . /code
